translation-tool/inputs/source_meta/objects/SA_PP_StageIndicatorSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>StageColor__c</fullName>
        <label>StageColor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Subtitle__c</fullName>
        <label>Stage Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StagesNameValue__c</fullName>
        <label>StagesNameValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StagesName__c</fullName>
        <label>StagesName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SA_PP_StageIndicatorSettings</label>
</CustomObject>